<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.amy</groupId>
    <artifactId>amy</artifactId>
    <version>3.6.8</version>

    <name>amy</name>
    <url>http://www.amy.vip</url>
    <description>若依微服务系统</description>

    <properties>
        <amy.version>3.6.8</amy.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>21</java.version>
        <spring-boot.version>4.0.6</spring-boot.version>
        <spring-cloud.version>2025.1.1</spring-cloud.version>
        <spring-cloud-alibaba.version>2025.1.0.0</spring-cloud-alibaba.version>
        <spring-boot-admin.version>4.0.4</spring-boot-admin.version>
        <mybatis-spring-boot.version>4.0.1</mybatis-spring-boot.version>
        <mybatis-plus.version>3.5.17</mybatis-plus.version>
        <kaptcha.version>2.3.3</kaptcha.version>
        <pagehelper.boot.version>4.1.0</pagehelper.boot.version>
        <druid.version>1.2.28</druid.version>
        <dynamic-ds.version>4.5.0</dynamic-ds.version>
        <commons.io.version>2.22.0</commons.io.version>
        <velocity.version>2.3</velocity.version>
        <fastjson.version>2.0.62</fastjson.version>
        <jjwt.version>0.9.1</jjwt.version>
        <minio.version>8.2.2</minio.version>
        <poi.version>4.1.2</poi.version>
        <springdoc.version>3.0.3</springdoc.version>
        <transmittable-thread-local.version>2.14.5</transmittable-thread-local.version>
    </properties>

    <!-- 依赖声明 -->
    <dependencyManagement>
        <dependencies>

            <!-- SpringCloud 微服务 -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- SpringCloud Alibaba 微服务 -->
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                <version>${spring-cloud-alibaba.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- SpringBoot 依赖配置 -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Springdoc webmvc 依赖配置 -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>

            <!-- 验证码 -->
            <dependency>
                <groupId>pro.fessional</groupId>
                <artifactId>kaptcha</artifactId>
                <version>${kaptcha.version}</version>
            </dependency>

            <!-- pagehelper 分页插件 -->
            <dependency>
                <groupId>com.github.pagehelper</groupId>
                <artifactId>pagehelper-spring-boot-starter</artifactId>
                <version>${pagehelper.boot.version}</version>
                <exclusions>
                    <exclusion>
                        <artifactId>mybatis-spring</artifactId>
                        <groupId>org.mybatis</groupId>
                    </exclusion>
                </exclusions>
            </dependency>

            <dependency>
                <groupId>org.mybatis.spring.boot</groupId>
                <artifactId>mybatis-spring-boot-starter</artifactId>
                <version>${mybatis-spring-boot.version}</version>
            </dependency>

            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-spring-boot4-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>

            <!-- io常用工具类 -->
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons.io.version}</version>
            </dependency>

            <!-- excel工具 -->
            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi-ooxml</artifactId>
                <version>${poi.version}</version>
            </dependency>

            <!-- 代码生成使用模板 -->
            <dependency>
                <groupId>org.apache.velocity</groupId>
                <artifactId>velocity-engine-core</artifactId>
                <version>${velocity.version}</version>
            </dependency>

            <!-- JSON 解析器和生成器 -->
            <dependency>
                <groupId>com.alibaba.fastjson2</groupId>
                <artifactId>fastjson2</artifactId>
                <version>${fastjson.version}</version>
            </dependency>

            <!-- JWT -->
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt</artifactId>
                <version>${jjwt.version}</version>
            </dependency>

            <!-- 线程传递值 -->
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>transmittable-thread-local</artifactId>
                <version>${transmittable-thread-local.version}</version>
            </dependency>

            <!-- 核心模块 -->
            <dependency>
                <groupId>com.amy</groupId>
                <artifactId>amy-common-core</artifactId>
                <version>${amy.version}</version>
            </dependency>

            <!-- 接口模块 -->
            <dependency>
                <groupId>com.amy</groupId>
                <artifactId>amy-common-swagger</artifactId>
                <version>${amy.version}</version>
            </dependency>

            <!-- 安全模块 -->
            <dependency>
                <groupId>com.amy</groupId>
                <artifactId>amy-common-security</artifactId>
                <version>${amy.version}</version>
            </dependency>

            <!-- 数据脱敏 -->
            <dependency>
                <groupId>com.amy</groupId>
                <artifactId>amy-common-sensitive</artifactId>
                <version>${amy.version}</version>
            </dependency>

            <!-- 权限范围 -->
            <dependency>
                <groupId>com.amy</groupId>
                <artifactId>amy-common-datascope</artifactId>
                <version>${amy.version}</version>
            </dependency>

            <!-- 多数据源 -->
            <dependency>
                <groupId>com.amy</groupId>
                <artifactId>amy-common-datasource</artifactId>
                <version>${amy.version}</version>
            </dependency>

            <!-- 分布式事务 -->
            <dependency>
                <groupId>com.amy</groupId>
                <artifactId>amy-common-seata</artifactId>
                <version>${amy.version}</version>
            </dependency>

            <!-- 日志记录 -->
            <dependency>
                <groupId>com.amy</groupId>
                <artifactId>amy-common-log</artifactId>
                <version>${amy.version}</version>
            </dependency>

            <!-- 缓存服务 -->
            <dependency>
                <groupId>com.amy</groupId>
                <artifactId>amy-common-redis</artifactId>
                <version>${amy.version}</version>
            </dependency>

            <!-- 系统接口 -->
            <dependency>
                <groupId>com.amy</groupId>
                <artifactId>amy-api-system</artifactId>
                <version>${amy.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>amy-auth</module>
        <module>amy-gateway</module>
        <module>amy-visual</module>
        <module>amy-modules</module>
        <module>amy-api</module>
        <module>amy-common</module>
        <module>amy-wechat</module>
        <module>amy-biz-modules</module>
    </modules>
    <packaging>pom</packaging>

    <dependencies>
        <!-- bootstrap 启动器 -->
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-bootstrap</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <parameters>true</parameters>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>repackage</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <repositories>
        <repository>
            <id>public</id>
            <name>aliyun nexus</name>
            <url>https://maven.aliyun.com/repository/public</url>
            <releases>
                <enabled>true</enabled>
            </releases>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>public</id>
            <name>aliyun nexus</name>
            <url>https://maven.aliyun.com/repository/public</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

</project>
